# rag-system

./: .gitignore  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  ТЗ ПП .txt
docker/app/: Dockerfile
docker/frontend/: .dockerignore  Dockerfile  copy-entrypoint.sh  entrypoint.sh
docker/nginx/: nginx.conf
docker/nginx-exporter/: config.hcl
src/: auth.py  config.py  create_admin.py  database.py  main.py  models.py  schemas.py
src/dao/: __init__.py  admin_log_dao.py  base.py  chat_dao.py  dependencies.py  document_dao.py  feedback_dao.py  topic_dao.py  user_dao.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx
src/frontend/src/api/: client.ts  services.ts
src/frontend/src/components/: DocumentViewer.tsx  FeedbackButton.tsx  Header.tsx  ProtectedRoute.tsx
src/frontend/src/components/Auth/: LoginForm.tsx  RegisterForm.tsx
src/frontend/src/context/: AuthContext.tsx
src/frontend/src/hooks/: useChatHistory.ts  useChatSession.ts
src/frontend/src/pages/: Auth.tsx  Home.tsx  TopicPage.tsx
src/frontend/src/theme/: index.ts
src/frontend/src/types/: index.ts
src/frontend/src/utils/: chatUtils.ts  styles.ts  validation.ts
src/routers/: __init__.py  admin.py  auth.py  chat.py  documents.py  feedback.py  topics.py
src/scripts/: create_hnsw_index.py
src/services/: llm_service.py  pdf_service.py  web_scraper_service.py
src/static/: app.js  index.html  style.css
src/static/assets/: index-BJlFn0C6.js  index-CI22rlHu.js  index-CLb6J_Vu.js  index-DdM2brm0.js
(+10 files in other folders)
